--- a/Desktop/comision-54535/desafios/Desafio 3/scss/style.scss
+++ b/Desktop/comision-54535/desafios/Desafio 3/scss/style.scss
@@ -1,1 +1,15 @@
+/* por alguna razon no funciona las fonts que descargue, aun no encuentro solucion */
+@font-face {
+    font-family: "Counter Strike"; 
+    src: url(../scss/fonts/counter_strike/cs_regular.ttf) format('truetype');
+  }
+
 /* reset */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+// pagina principal
+@import "../scss/paginas/index";
