--- a/Desktop/comision-54535/desafios/Desafio 3/scss/utilidades/_variables.scss
+++ b/Desktop/comision-54535/desafios/Desafio 3/scss/utilidades/_variables.scss
@@ -1,8 +1,8 @@
 // colores de fuente
 
-$letras-claritas: #98BDE6;
+$letras-claritas: #BDD5EF;
 
-
+$letras-normales: #EDE8E5;
 
 // colores principales
 
