--- a/Desktop/comision-54535/desafios/Desafio 3/css/main.css
+++ b/Desktop/comision-54535/desafios/Desafio 3/css/main.css
@@ -1,4 +1,3 @@
-/* por alguna razon no funciona las fonts que descargue, aun no encuentro solucion */
 @font-face {
   font-family: "Counter Strike";
   src: url(../scss/fonts/counter_strike/cs_regular.ttf) format("truetype"); }
@@ -12,14 +11,54 @@
 /* estilos de index*/
 body {
   background-color: #060518; }
-  body div h1 {
+  body header nav {
+    border-radius: 26px;
+    background-color: #232233;
+    box-shadow: 13px 13px 26px #000000,-13px -13px 26px #21213a;
+    margin-top: 2vh; }
+    body header nav img {
+      margin-left: 8rem;
+      height: 3.5rem;
+      width: auto; }
+      @media screen and (max_width: 480px) {
+        body header nav img {
+          margin-right: 8rem;
+          height: 1rem;
+          width: auto; } }
+    body header nav ul {
+      margin-left: 5%;
+      gap: 4.5rem; }
+      @media screen and (max_width: 768px) {
+        body header nav ul {
+          gap: 1rem; } }
+    body header nav .nav__a {
+      color: #BDD5EF;
+      font-weight: lighter;
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; }
+  @media screen and (max_width: 480px) {
+    body header div {
+      display: flex;
+      text-align: center; } }
+  body header div h1 {
+    color: white;
+    font-family: Counter Strike;
+    margin: 2rem 3rem 3rem 3rem;
     display: flex;
     justify-content: center; }
-  body header img {
-    height: 5rem;
-    width: auto; }
-    body header img ul li {
-      color: #98BDE6; }
 
-.nav-estilo {
-  background-color: #403F4E; }
+main div {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center; }
+  main div img {
+    border-radius: 26px;
+    color: #060518;
+    box-shadow: -13px -13px 26px #02020a, 13px 13px 26px #0a0826;
+    height: 33rem;
+    width: auto; }
+  main div p {
+    color: #EDE8E5;
+    overflow: hidden;
+    margin: 2rem 2rem 2rem 2rem;
+    text-align: center; }
