--- a/Desktop/comision-54535/desafios/Desafio 3/scss/utilidades/_mixin.scss
+++ b/Desktop/comision-54535/desafios/Desafio 3/scss/utilidades/_mixin.scss
@@ -1,3 +1,30 @@
-// mixin para index
+// mixins
 
+@mixin flex( $dis, $direction, $wrap, $justify, $align) {
+    display: $dis;
+    flex-flow: $direction $wrap;
+    justify-content: $justify;
+    align-items: $align;
+}
 
+@mixin height ($height) {
+    height: $height;
+    width: auto;
+}
+
+// media queries
+
+@mixin celular ( $medida : 480px) {
+    @media screen and (max_width: $medida ) {
+       @content; 
+    }
+}
+
+// neomorfismo
+
+@mixin neo( $radius , $eje) {
+    border-radius: $radius;
+    background: #000000;
+    box-shadow: $eje $eje ($eje*2) #000000 ,
+                (-$eje) (-$eje) ($eje*2) ;
+}
