--- a/Desktop/comision-54535/desafios/Desafio 3/scss/utilidades/_variables.scss
+++ b/Desktop/comision-54535/desafios/Desafio 3/scss/utilidades/_variables.scss
@@ -4,6 +4,8 @@ $letras-claritas: #BDD5EF;
 
 $letras-normales: #EDE8E5;
 
+$letras-oscuras: #080434;
+
 // colores principales
 
 $principal-ct: #060518;
