--- a/Desktop/comision-54535/desafios/Desafio 3/css/main.css
+++ b/Desktop/comision-54535/desafios/Desafio 3/css/main.css
@@ -26,7 +26,7 @@ body {
   body header nav {
     border-radius: 26px;
     background-color: #151426;
-    box-shadow: 13px 13px 26px #000000,-13px -13px 26px #21213a;
+    box-shadow: 13px 13px 26px #000000,-13px -13px 26px #151525;
     margin-top: 2vh; }
     body header nav img {
       margin-left: 8rem;
@@ -114,19 +114,15 @@ footer {
   footer div {
     display: flex;
     flex-flow: row nowrap;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center; }
     footer div .footer__img {
-      display: flex;
-      justify-content: center;
-      width: 5vh;
-      height: 5vh; }
+      width: 6vh;
+      height: 6vh;
+      margin-inline: 1rem; }
   footer h3 {
     font-size: small;
     font-style: oblique;
-    display: flex;
-    align-items: center;
-    justify-items: center;
     margin-right: 10rem;
     color: #BDD5EF; }
   footer .footer__a {
