--- a/Desktop/comision-54535/desafios/Desafio 3/scss/paginas/_index.scss
+++ b/Desktop/comision-54535/desafios/Desafio 3/scss/paginas/_index.scss
@@ -113,6 +113,7 @@ section{
              -7px -7px 16px #121023;
         p{
             color: $letras-oscuras;
+            overflow: hidden;
             max-width: 100%;
             margin: 0 auto;
             font-weight: bold;
