--- a/Desktop/comision-54535/desafios/Desafio 3/scss/paginas/_index.scss
+++ b/Desktop/comision-54535/desafios/Desafio 3/scss/paginas/_index.scss
@@ -82,8 +82,10 @@ main{
             overflow: hidden;
             margin: 2rem 2rem 2rem 2rem;
             text-align: center;
-            font-style: italic;
-            font-weight: 600;
+            font-family: Rubik;
+            font-style: oblique;
+            font-weight: 400;
+            font-size: large;
         }
     }
 }
@@ -116,7 +118,7 @@ section{
             overflow: hidden;
             max-width: 100%;
             margin: 0 auto;
-            font-weight: bold;
+            font-family: Schibsted Grotesk;
         }
     }
 }
