--- a/Desktop/comision-54535/desafios/Desafio-3/scss/style.scss
+++ b/Desktop/comision-54535/desafios/Desafio-3/scss/style.scss
@@ -30,6 +30,7 @@
 // imports pages
 @import "../scss/paginas/historia";
 @import "../scss/paginas/index";
+@import "../scss/paginas/mejoresequipos";
 
 /* reset */
 
