--- a/Desktop/comision-54535/desafios/Desafio-3/scss/style.scss
+++ b/Desktop/comision-54535/desafios/Desafio-3/scss/style.scss
@@ -31,10 +31,11 @@
 @import "../scss/paginas/historia";
 @import "../scss/paginas/index";
 @import "../scss/paginas/mejoresequipos";
+@import "../scss/paginas/jugadores";
 
 /* reset */
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
