todos ls os html listos sin media queries

--- a/Desktop/comision-54535/desafios/Desafio-3/scss/style.scss
+++ b/Desktop/comision-54535/desafios/Desafio-3/scss/style.scss
@@ -32,6 +32,7 @@
 @import "../scss/paginas/index";
 @import "../scss/paginas/mejoresequipos";
 @import "../scss/paginas/jugadores";
+@import "../scss/paginas/skins";
 
 /* reset */
 
